sql/sql_derived.cc
@@ -1335,6 +1335,13 @@ bool mysql_derived_reinit(THD *thd, LEX *lex, TABLE_LIST *derived)
                        (derived->alias.str ? derived->alias.str : "<NULL>"),
                        derived->get_unit()));
   st_select_lex_unit *unit= derived->get_unit();
+  st_select_lex *sl= unit->first_select();
+
+  // reset item names all the selects in this unit's union
+  do {
+    if (sl->original_names)
+      sl->replace_item_list_names(sl->original_names);
+  } while ((sl=  sl->next_select()));
 
   derived->merged_for_insert= FALSE;
   unit->unclean();
